# USBEventManager

./: DEVELOPMENT NOTES.md  LICENSE  README.md  install.bat  install.sh  setup.cfg
USBEventManager/: actions.py  automatic_start.py  core.py  helpers.py  services.py  usb_helpers.py  usbeventmanager.py
errata/: USBEventManager.sh  usbeventmanager.yml
errata/custom_command_examples/: env.ps1  env.sh
