[metadata]
name = USBEventManager
version = 0.1
author = Craig Carl
author-email = craig@gestas.net
home-page = https://github.com/gestas/usbeventmanager
description = Cross-platform Event Handler for USB Devices.
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords = USB EVENT PROTECT INSERT REMOVE LOCK SHUTDOWN CUSTOM
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
project_urls =
    Bug Tracker = https://github.com/gestas/usbeventmanager/issues

[options]
zip_safe = false
include_package_data = true
python_requires >= 3.8
packages = USBEventManager
setup_requires =
    setuptools >=50.3.0
install_requires=
        appdirs==1.4.4
        click==7.1.2
        mypy-extensions==0.4.3
        pathspec==0.8.0
        pyusb==1.1.0
        regex==2020.7.14
        ruamel.yaml==0.16.12
        ruamel.yaml.clib==0.2.2
        toml==0.10.1
        typed-ast==1.4.1
        typing-extensions==3.7.4.3

[options.extras_require]
dev = black>=20.8b1

[options.package_data]
readmes = *.md, LICENSE
errata = errata/*
run = usbeventmanager.sh, usbeventmanager.ps1

[bdist_wheel]
universal = true

